# employment-situation-dashboard

./: =4.2.0  README.md  pyproject.toml
src/employment_situation/: app.py  charts_creator.py  data_loader.py
