[project]
name = "employment-situation"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Juliette.Bornier", email = "juliette.bornier.3110@gmail.com" }
]
dependencies = [
    "dbnomics>=1.2.5",
    "streamlit>=1.38.0",
    "ipykernel>=6.29.5",
    "pip>=24.2",
    "pandas>=2.2.2",
    "plotly-express>=0.4.1",
    "nbformat>=5.10.4",
    "streamlit-option-menu>=0.3.13",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/employment_situation"]
